predicate: Remove Predicate tree related code.
This commit removes the predicate tree related code. We are making tree
an independent library. This commit is a first step in that direction.
Predicated tree can then depend on this as a completely independent
project.

Change in project includes to relative paths. This is to ensure that the
files are included correctly when added as an external dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 file(READ VERSION.txt VERSION_INFORMATION)
 string(STRIP ${VERSION_INFORMATION} VERSION_INFORMATION)
-project(predicated_tree VERSION ${VERSION_INFORMATION} LANGUAGES CXX)
+project(tree VERSION ${VERSION_INFORMATION} LANGUAGES CXX)
 
 include(${CMAKE_SOURCE_DIR}/.conan/conanbuildinfo.cmake)
 conan_basic_setup()
@@ -16,7 +16,6 @@ add_subdirectory(include)
 
 add_subdirectory(benchmark)
 add_subdirectory(doc)
-add_subdirectory(src)
 
 # This enable_testing call should be in the root directory as per
 # https://cmake.org/cmake/help/v3.10/command/enable_testing.html
