--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -11,11 +11,9 @@ get_filename_component(DOXYREST_BINDIR ${DOXYREST_EXECUTABLE} DIRECTORY)
 set(DOXYREST_ROOT ${DOXYREST_BINDIR}/../../../../doxyrest)
 
 set(DOCUMENTATION_OVERVIEW_PAGE
-    ${CMAKE_CURRENT_SOURCE_DIR}/mainpage.md)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../README.md)
 set(DOCUMENTATION_INSTALLATION_PAGE
     ${CMAKE_CURRENT_SOURCE_DIR}/installation.md)
-set(DOCUMENTATION_SPECIAL_PAGE
-    ${CMAKE_CURRENT_SOURCE_DIR}/special.md)
 set(DOCUMENTATION_TUTORIAL_PAGE
     ${CMAKE_CURRENT_SOURCE_DIR}/tutorial.md)
 
@@ -34,7 +32,7 @@ set(DOXYGEN_GENERATE_HTML NO)
 set(DOXYGEN_GENERATE_XML YES)
 set(DOXYGEN_HAVE_DOT NO)
 set(DOXYGEN_MULTILINE_CPP_IS_BRIEF YES)
-set(DOXYGEN_PROJECT_NAME "Predicated Tree")
+set(DOXYGEN_PROJECT_NAME "Tree")
 set(DOXYGEN_QUIET YES)
 set(DOXYGEN_XML_OUTPUT _xml)
 set(DOXYGEN_WARNINGS NO)
