cmake: Directly invoke conan if possible.
Currently the conan setup has to be done outside of the CMake system.
This commit fixes this by directly invoking the conan setup from inside
the cmake setup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,24 @@ file(READ VERSION.txt VERSION_INFORMATION)
 string(STRIP ${VERSION_INFORMATION} VERSION_INFORMATION)
 project(tree VERSION ${VERSION_INFORMATION} LANGUAGES CXX)
 
-include(${CMAKE_SOURCE_DIR}/.conan/conanbuildinfo.cmake)
-conan_basic_setup()
+# The following is needed for conan when it is trying to build the
+# dependencies.
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+# Install conan and enable this cmake setup to use it.
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+   message(STATUS "Downloading conan.cmake from github")
+   file(DOWNLOAD "https://github.com/conan-io/cmake-conan/raw/v0.15/conan.cmake"
+                 "${CMAKE_BINARY_DIR}/conan.cmake")
+endif()
+
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+conan_cmake_run(CONANFILE conanfile.py
+                BASIC_SETUP CMAKE_TARGETS
+                BUILD missing
+                GENERATORS cmake)
 
 set(CMAKE_CXX_COMPILER /usr/bin/clang++-7)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -fno-exceptions -fno-omit-frame-pointer -O3")
