--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(raw_tree_test raw_tree.cpp)
-target_link_libraries(raw_tree_test PRIVATE tree)
+target_link_libraries(raw_tree_test PRIVATE tree CONAN_PKG::Catch2)
 add_test(NAME tree_raw_tree_test COMMAND raw_tree_test)
