--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -14,6 +14,8 @@ set(DOCUMENTATION_OVERVIEW_PAGE
     ${CMAKE_CURRENT_SOURCE_DIR}/../README.md)
 set(DOCUMENTATION_INSTALLATION_PAGE
     ${CMAKE_CURRENT_SOURCE_DIR}/installation.md)
+set(DOCUMENTATION_DEVSETUP_PAGE
+    ${CMAKE_CURRENT_SOURCE_DIR}/devsetup.md)
 set(DOCUMENTATION_TUTORIAL_PAGE
     ${CMAKE_CURRENT_SOURCE_DIR}/tutorial.md)
 
@@ -44,6 +46,7 @@ doxygen_add_docs(doxygen_docs
     ${CMAKE_SOURCE_DIR}/include
     ${DOCUMENTATION_OVERVIEW_PAGE}
     ${DOCUMENTATION_INSTALLATION_PAGE}
+    ${DOCUMENTATION_DEVSETUP_PAGE}
     ${DOCUMENTATION_SPECIAL_PAGE}
     ${DOCUMENTATION_TUTORIAL_PAGE}
     COMMENT "Generating API documentation with doxygen")
